Explicitly set font size to 16px to prevent issue of zooming in on mobile devices

--- a/src/styles/components/Form.module.css
+++ b/src/styles/components/Form.module.css
@@ -22,6 +22,7 @@
     padding: 15px 15px;
     margin: 15px 0;
     background: whitesmoke;
+    font-size: 16px;
 }
 
 .form_container > form > input:focus,
